--- a/src/styles/components/_options.scss
+++ b/src/styles/components/_options.scss
@@ -66,10 +66,10 @@
         width: 80%;
         // padding: 0 0.5em;
         &__input {
-            width: 40%;
+            width: 45%;
         }
         &__runway.show-input {
-            width: 55%;
+            width: 50%;
         }
     }
 }
